# robo-mvp

./: .gitignore  README.md  requirements.txt
config/: camera.yaml  scene.yaml
data/test_images/: .gitkeep
docs/: index.html  poprawki_i_architektura.md  tryb_operatora.html
ros2_ws/src/robomvp/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/robomvp/launch/: demo.launch.py
ros2_ws/src/robomvp/msg/: MarkerDetection.msg  MarkerPose.msg  Offset.msg  State.msg
ros2_ws/src/robomvp/robomvp/: __init__.py  camera_interface.py  logger_utils.py  main_node.py  marker_detection.py  marker_pose_estimator.py  motion_sequences.py  offset_corrector.py  sound_feedback.py  state_machine.py  unitree_robot_api.py
ros2_ws/src/robomvp_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/robomvp_bringup/launch/: demo.launch.py
scripts/: run_demo.sh
tests/: test_state_machine.py
