<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Pakiet główny RoboMVP - minimalna aplikacja ROS2 dla robota Unitree G1 EDU -->
<package format="3">
  <name>robomvp</name>
  <version>0.1.0</version>
  <description>Minimalna aplikacja ROS2 MVP dla robota humanoidalnego Unitree G1 EDU.
  Demonstruje scenariusz manipulacji z detekcją markerów AprilTag i korekcją pozycji.</description>

  <maintainer email="maintainer@robomvp.local">RoboMVP Maintainer</maintainer>
  <license>MIT</license>

  <!-- Narzędzia budowania -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Zależności wykonania węzłów Python -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Zestaw testowy ament -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
