<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Pakiet startowy RoboMVP - pliki uruchomieniowe dla demonstracji -->
<package format="3">
  <name>robomvp_bringup</name>
  <version>0.1.0</version>
  <description>Pliki uruchomieniowe dla systemu RoboMVP. Uruchamia węzły kamery,
  detekcji markerów, estymacji pozy i węzeł główny.</description>

  <maintainer email="maintainer@robomvp.local">RoboMVP Maintainer</maintainer>
  <license>MIT</license>

  <!-- Narzędzia budowania -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Zależności od innych pakietów RoboMVP -->
  <exec_depend>robomvp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- Zestaw testowy ament -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
